fixed more of the styling in the restaurant-list items

--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,8 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  flex-direction: column;
+  align-items: center;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -144,9 +146,13 @@ nav h1 a {
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 0 25px 25px;
   text-align: left;
-  width: 270px;
+  width: 85%;
+  max-width:475px;
+  margin-left: auto;
+  margin-right:auto;
+  display:block;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -155,6 +161,7 @@ nav h1 a {
   max-width: 100%;
   min-height: 248px;
   min-width: 100%;
+  align-items:center;
 }
 #restaurants-list li h1 {
   color: #f18200;
